# ai-mentor-lab

./: CHROMA_UI_GUIDE.md  README.md  chroma_server.py  esl_app.db  file_structure.md  main.py  pyproject.toml  requirements.txt  run_chroma_server.py  seed_data.py  setup_guide.md  start_chroma_server.py
app/db/: database.py  models.py
chroma_db/: chroma.sqlite3
rag/: chroma_setup.py  db_integration.py  homework_generator.py
